fix(OutputDisplay.jsx) fix bug with refresh not resizing properly when overflowing

--- a/src/components/parts/OpenCloseBox/OpenCloseBox.css
+++ b/src/components/parts/OpenCloseBox/OpenCloseBox.css
@@ -76,6 +76,7 @@
 
 	background: #E8E4E4;  
 	overflow: auto; 
+	box-sizing: border-box;
 } 
 
 .box-body-closing {
